# shotdiff

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bump.yml  ci.yml  release.yml
.jules/: bolt.md
benches/: diff_benchmark.rs
examples/: gen_fixtures.rs
packaging/homebrew/: shotdiff.rb
src/: main.rs
