[package]
name = "shotdiff"
version = "0.1.0"
edition = "2024"
description = "Side-by-side screenshot diff: BEFORE | DIFF | AFTER, changed pixels highlighted in pink"
license = "MIT"
repository = "https://github.com/Matuyuhi/shotdiff"
homepage = "https://github.com/Matuyuhi/shotdiff"

[[bin]]
name = "shotdiff"
path = "src/main.rs"

[dependencies]
image = "0.25"

[profile.release]
opt-level = 3
lto = true
strip = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "diff_benchmark"
harness = false
